postgres dropdb and pingdb, keycloak operator based formulas